<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="325dp"
        android:layout_height="89dp"
        android:layout_marginTop="141dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_login_title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_tcmpp_login_icon"
                android:layout_width="49dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@mipmap/applet_ic_tcmpp_login" />

            <TextView
                android:id="@+id/tv_tcmpp_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/applet_login_title"
                android:textColor="@color/black"
                android:textSize="43sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_tcmpp_login_title_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applet_login_title_desc"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="141dp"
        android:visibility="gone"
        android:src="@mipmap/applet_ic_tcmpp_login_main_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_tcmpp_login_username"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_marginTop="287dp"
        android:background="@mipmap/applet_bg_tmcpp_login_input_bg"
        android:hint="@string/applet_login_input_hint"
        android:paddingLeft="16dp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_tcmpp_login_confirm"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_marginTop="377dp"
        android:textSize="16dp"
        android:text="@string/applet_login_confirm"
        android:textColor="@color/white"
        android:background="@mipmap/applet_bg_login_btn_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>