<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:background="@null">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="298dp"
        app:cardCornerRadius="8dp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_mini_operate_preload"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/applet_main_mini_operate_preload"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/applet_mini_operate_bg" />

            <TextView
                android:id="@+id/tv_mini_operate_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/applet_main_mini_operate_clear_cache"

                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/applet_mini_operate_bg" />

            <TextView
                android:id="@+id/tv_mini_operate_reset"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/applet_main_mini_operate_reset"

                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="5dp"
                android:background="@color/applet_mini_operate_bg" />

            <TextView
                android:id="@+id/tv_mini_operate_cancel"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/applet_main_mini_operate_cancel"

                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>