<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_top_of_main"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:background="@drawable/applet_bg_main_title_corner"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="361dp"
            android:layout_height="54dp"
            android:layout_marginTop="54dp"
            android:gravity="center"
            android:text="@string/applet_main_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_tool_trigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@mipmap/applet_ic_tcmpp_main_more"
            app:layout_constraintBottom_toBottomOf="@id/tv_main_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_main_title" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="118dp"
            android:visibility="gone"
            android:src="@mipmap/applet_bg_tcmpp_main_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="279dp"
            android:layout_height="62dp"
            android:layout_marginTop="118dp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_login_title_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_tcmpp_main_icon"
                    android:layout_width="33dp"
                    android:layout_height="31dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/applet_ic_tcmpp_login" />

                <TextView
                    android:id="@+id/tv_tcmpp_main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/applet_login_title"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_tcmpp_main_title_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applet_login_title_desc"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="italic|bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/applet_bg_main_content_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            style="@style/CustomTabLayout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            app:tabTextAppearance="@style/CustomTabTextAppearance"
            app:layout_constraintTop_toTopOf="parent"
            app:tabIndicator="@drawable/tab_indicator"
            app:tabIndicatorFullWidth="false"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/applet_main_tab_my" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/applet_main_tab_recent" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_main_mini_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout">

        </androidx.viewpager.widget.ViewPager>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/main_tool_view"
        layout="@layout/layout_main_tool_dialog"
        android:layout_width="134dp"
        android:layout_height="162dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="6dp"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <include-->
    <!--        android:id="@+id/toast_of_login_success_view"-->
    <!--        layout="@layout/layout_toast_of_success"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="68dp"-->
    <!--        android:layout_marginTop="65dp"-->
    <!--        android:layout_marginStart="10dp"-->
    <!--        android:layout_marginEnd="10dp"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_toast_of_success"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_login_success_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:src="@mipmap/applet_ic_login_success"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tcmpp_toast_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/applet_login_success"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_login_success_icon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>