<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_pay_result"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/applet_ic_login_success"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_payment_result"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_payment_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:gravity="start|center_vertical"
        android:text="@string/applet_pay_success"
        android:textColor="@color/applet_pay_success_green"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/iv_pay_result"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pay_ic_user"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:background="@color/transparent"
        android:layout_marginTop="120dp"
        app:cardCornerRadius="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_pay_ic_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/applet_ic_tcmpp_login" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_pay_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_pay_ic_user" />

    <TextView
        android:id="@+id/tv_pay_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="$"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_pay_sum"
        app:layout_constraintTop_toBottomOf="@id/tv_pay_user_name" />

    <TextView
        android:id="@+id/tv_pay_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_marginTop="-12dp"
        app:layout_constraintLeft_toRightOf="@id/tv_pay_type"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_pay_type" />

    <TextView
        android:id="@+id/btn_pay_finish"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:background="@drawable/applet_bg_pay_success_btn_corner"
        android:layout_marginBottom="120dp"
        android:text="@string/applet_pay_finished"
        android:textSize="17sp"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>